--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,7 +1,3 @@
----
-
----
-
 <html lang="jp">
 	<head>
 		<meta charset="utf-8" />
@@ -10,12 +6,14 @@
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro</title>
 	</head>
-	<body>
-		<a href="/">ホーム</a>
-		<a href="/about/">概要</a>
-		<a href="/blog/">ブログ</a>
-		
-		<h1>Astro</h1>
-		<h1>私のAstroサイト</h1>
-	</body>
+  <body>
+    <a href="/">ホーム</a>
+    <a href="/about/">概要</a>
+    <a href="/blog/">ブログ</a>
+  
+    <h1>Astro</h1>
+    <h1>アバウト</h1>
+  </body>
 </html>
+
+
