--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,6 @@
 ---
+import '../styles/global.css';
+
 const pageTitle = "私について";
 
 const identity = {
@@ -14,12 +16,27 @@ const happy = false;
 const finished = true;
 const goal = 3;
 
+const skillColor = "navy";
+const fontWeight = "bold";
+const textCase = "uppercase";
+
 ---
 <html lang="ja">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>{pageTitle}</title>
+    <style define:vars={{skillColor, fontWeight, textCase}}>
+      h1 {
+        color: purple;
+        font-size: 4rem;
+      }
+      .skill {
+        color: var(--skillColor);
+        font-weight: var(--fontWeight);
+        text-transform: var(--textCase);
+      }
+    </style>
   </head>
   <body>
     <a href="/">ホーム</a>
@@ -38,7 +55,7 @@ const goal = 3;
     </ul>
     <p>私のスキルは以下の通りです。</p>
     <ul>
-      {skills.map((skill) => <li>{skill}</li>)}
+      {skills.map((skill) => <li class="skill">{skill}</li>)}
     </ul>
 
     {happy && <p>I am happy to be learning Astro! Astroを学べて幸せです！</p>}
